# genby

./: .crates.toml  .gitignore  0.bootstrap.js  Cargo.toml  README.md  bootstrap.js
example-build/: 0.bootstrap.js  bootstrap.js  index.html
pkg/: README.md  genby.d.ts  genby.js  genby_bg.d.ts  genby_bg.wasm  package.json
src/: biome.rs  cell.rs  lib.rs  main.rs  perlin.rs  utils.rs  vec.rs  world.rs
www/: index.html  index.js  simulationConfig.js
